# BoostPythonDemo

./: README.md
boostpython_Callback/: BoostPythonModule.cpp  CMakeLists.txt  README.md  soldier.cpp  soldier.hpp  test_demo.py
boostpython_cxx_call_python/: CMakeLists.txt  README.md  main.cpp
boostpython_cxx_call_python/py_serial/: py_serial.py
boostpython_python_call_cxxclass_FUGUI_interface/: CMakeLists.txt  CalculateSkuidNum.cpp  CalculateSkuidNum.h  README.md  interface.cpp  use_cxx_fg_interface.py
boostpython_python_call_cxxfunc/: CMakeLists.txt  README.md  hello.cpp  use_cxx_hello.py
